--- a/about-us.html
+++ b/about-us.html
@@ -55,16 +55,16 @@
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
+                                    <a class="nav-link text-white" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item ">
                                     <a class="nav-link active text-white" href="about-us.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" href="practise-areas.html">Practice Areas</a>
+                                    <a class="nav-link text-white" href="practise-areas.html">Practice Areas</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" href="our-team.html">Our Team</a>
+                                    <a class="nav-link text-white" href="our-team.html">Our Team</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle text-white" href="#" role="button"
@@ -76,7 +76,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" href="contact-us.html">Contact Us</a>
+                                    <a class="nav-link text-white" href="contact-us.html">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
