--- a/blog.html
+++ b/blog.html
@@ -55,28 +55,28 @@
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
+                                    <a class="nav-link text-white" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link active text-white" href="about-us.html">About Us</a>
+                                    <a class="nav-link text-white" href="about-us.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" href="practise-areas.html">Practice Areas</a>
+                                    <a class="nav-link text-white" href="practise-areas.html">Practice Areas</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" href="our-team.html">Our Team</a>
+                                    <a class="nav-link text-white" href="our-team.html">Our Team</a>
                                 </li>
                                 <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle text-white" href="#" role="button"
+                                    <a class="nav-link dropdown-toggle active text-white" href="#" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
-                                        News & Events
+                                        News & Event
                                     </a>
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="blog.html">Blog</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" href="contact-us.html">Contact Us</a>
+                                    <a class="nav-link text-white" href="contact-us.html">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
