--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
                                     <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link active text-white" href="about-us.html">About Us</a>
+                                    <a class="nav-link text-white" href="about-us.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" href="practise-areas.html">Practice Areas</a>
+                                    <a class="nav-link text-white" href="practise-areas.html">Practice Areas</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" href="our-team.html">Our Team</a>
+                                    <a class="nav-link text-white" href="our-team.html">Our Team</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle text-white" href="#" role="button"
@@ -77,7 +77,7 @@
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link active text-white" href="contact-us.html">Contact Us</a>
+                                    <a class="nav-link text-white" href="contact-us.html">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
@@ -174,7 +174,7 @@
                     situation.</p>
             </div>
             <div class="text-center">
-                <div class="btn btn-color shadow">Read More</div>
+                <div class="btn btn-color shadow"><a href="about-us.html" class="text-white">Read More</a></div>
             </div>
         </div>
         <!--================== Legal Counsel Section End ===================== -->
@@ -306,7 +306,7 @@
 
             </div>
             <div class="mt-5 text-center">
-                <div class="btn btn-color shadow">VIEW MORE</div>
+                <div class="btn btn-color shadow"><a href="practise-areas.html" class="text-white">VIEW MORE</a></div>
             </div>
 
         </div>
